[package]
name = "smart_house"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdcp = { path = "../sdcp" }
sdcpu = { path = "../sdcpu" }
th_simulator = { path = "../th_simulator" }
tokio = { version = "1.20.0", features = ["full"] }

[lib]
name ="smart_house_lib"
path = "src/lib.rs"
